--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -26,12 +26,16 @@ body{
     margin: 10px;
     font-size: 18px;
     color: black;
-    background:radial-gradient(#F6F5FA, #F6F5FA, #999999 100%);
-    border: transparent;
-    border-bottom: 4px solid;
-    border-bottom-color: #9AF5F5;
+    background:radial-gradient(circle closest-side at center#F6F5FA, #F6F5FA, #999999 70%);
+    border: 5px solid #AFBDD3;
     border-radius: 50%;
-    box-shadow: 0 4px 20px rgba(0, 255, 255, 0.6);
+    box-shadow: 
+    inset -4px -4px 8px rgba(0, 255, 255, 1), 
+    inset 1px 4px 8px rgb(253, 135, 237), 
+    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
+    0 0 15px 4px rgba(211, 211, 211, 0.4);
+
+    transition: all 0.3s ease;
 }
 .menu-container h1{
     color: white;
