--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
-body{
+
+html, body{
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #4e54c8, #8f94fb);
+    background: #4e54c8;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .menu-container{
@@ -25,18 +28,21 @@ body{
     padding: 15px;
     margin: 10px;
     font-size: 18px;
+    font-style: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    letter-spacing: 1px;
     color: black;
     background:radial-gradient(circle closest-side at center#F6F5FA, #F6F5FA, #999999 70%);
     border: 5px solid #AFBDD3;
     border-radius: 50%;
     box-shadow: 
     inset -4px -4px 8px rgba(0, 255, 255, 1), 
-    inset 1px 4px 8px rgb(253, 135, 237), 
+    inset 1px 4px 8px rgba(70, 142, 255, 1), 
     1px 15px 20px 10px rgba(0, 0, 0, 0.2),
     0 0 15px 4px rgba(211, 211, 211, 0.4);
-
     transition: all 0.3s ease;
 }
+
 .menu-container h1{
     color: white;
     font: 36px;
