--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -40,7 +40,13 @@ html, body{
     inset 1px 4px 8px rgba(70, 142, 255, 1), 
     1px 15px 20px 10px rgba(0, 0, 0, 0.2),
     0 0 15px 4px rgba(211, 211, 211, 0.4);
-    transition: all 0.3s ease;
+    
+}
+
+.menu-container .menu-buttons button:hover{
+    background: rgb(185, 185, 185);
+    transition: background-color 0.3s ease;
+    box-shadow: inset 0 0 20px 10px rgba(44, 44, 44, 0.6);
 }
 
 .menu-container h1{
