--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
-
-html, body{
+html, body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
@@ -13,44 +10,50 @@ html, body{
     overflow: hidden;
 }
 
-.menu-container{
+.menu-container {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 20px;
-    border: 10px;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.2), inset 0 2px 4px rgba(255, 255, 255, 0.5);
     width: 600px;
-    flex-wrap: wrap;
-}
-
-.menu-container .menu-buttons button{
-    width: 150px;
-    height: 150px;
-    padding: 15px;
-    margin: 10px;
-    font-size: 18px;
-    font-style: bold;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    letter-spacing: 1px;
-    color: black;
-    background:radial-gradient(circle closest-side at center#F6F5FA, #F6F5FA, #999999 70%);
-    border: 5px solid #AFBDD3;
-    border-radius: 50%;
-    box-shadow: 
-    inset -4px -4px 8px rgba(0, 255, 255, 1), 
-    inset 1px 4px 8px rgba(70, 142, 255, 1), 
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 0 15px 4px rgba(211, 211, 211, 0.4);
-    
-}
-
-.menu-container .menu-buttons button:hover{
-    background: rgb(0, 174, 255);
-    transition: background-color 0.3s ease;
-    box-shadow: inset 0 0 20px 10px rgba(40, 255, 237, 0.6);
-}
-
-.menu-container h1{
     color: white;
-    font: 36px;
-    margin-bottom: 20px;
+    align-items: center;
+}
+
+.menu-container .menu-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+
+.menu-container .menu-buttons button {
+    height: 70px;
+    width: 200px;
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 15px;
+    border: none;
+    background: linear-gradient(to right, #6a11cb, #2575fc);
+    border: 3px solid rgb(22, 85, 192);
+    color: white;
+    box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+
+.menu-container .menu-buttons button:hover {
+    transform: translateY(-3px);
+    box-shadow: 2px 8px 20px rgba(0, 0, 0, 0.5);
+}
+
+.menu-container .menu-buttons .playBtn {
+    background: linear-gradient(to right,#12a381, #1dc470, #61df44 70%);
+    border: 3px solid rgb(45, 120, 49);
+}
+
+.menu-container .menu-buttons .exitBtn {
+    background: linear-gradient(to right, #ff416c, #ff4b2b);
+    border: 3px solid rgb(205, 46, 18);
 }
