--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -32,6 +32,8 @@ html, body {
     height: 70px;
     width: 200px;
     font-size: 20px;
+    font-weight: 500;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
     padding: 10px 20px;
     border-radius: 15px;
     border: none;
@@ -49,7 +51,7 @@ html, body {
 }
 
 .menu-container .menu-buttons .playBtn {
-    background: linear-gradient(to right,#12a381, #1dc470, #61df44 70%);
+    background: linear-gradient(to right,#0f886c, #169153, #4db137 70%);
     border: 3px solid rgb(45, 120, 49);
 }
 
