--- a/Login Menu/style.css
+++ b/Login Menu/style.css
@@ -73,7 +73,7 @@ p {
 button {
     padding: 10px 20px;
     background-color: #4CAF50;
-    color: white;
+    color: green;
     border: none;
     border-radius: 5px;
     cursor: pointer;
