--- a/Leaderboard/leaderboard.css
+++ b/Leaderboard/leaderboard.css
@@ -1,45 +1,92 @@
+*{
+    box-sizing: border-box;
+}
+
+
 html, body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Lato', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #4e54c8;
+    background: #1C1F2A;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+.navbar{
+    background: #000000;
+    color: white;
+    display: flex;
+    list-style: none;
+    width: 100vw;
+    height: 100px;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 40px;
+}
+.navbar a{
+    font-size: 20px;
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
 }
 
-.leaderboard-container{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 20px;
-    border: 10px;
-    box-shadow: 0px 4px 10px rgba(0,0,0,0.2), inset 0 2px 4px rgba(255, 255, 255, 0.5);
-    width: 600px;
-    color: white;
-    align-items: center;
+.navbar li:first-child{
+    padding-left: 120px;
 }
- 
+
+.navbar li:last-child{
+    padding-right: 120px;
+}
 
 table{
-    width: 100%;
-    background-color: white;
-    border-collapse: collapse;
+    width: 90%;
+    margin: 20px auto;
+    border-collapse: separate;
+    border-spacing: 0 15px;
+
+}
+table thead{
+    background: #171921;
 }
 
-table, th, td{
-    border: 1px solid #ccc;
+table th, td{
+    color: white;
+    padding: 25px;
+    text-align: center;
+
+}
+table td{
+    font-size: 18px;
+    font-weight: 400;
+}
+table th{
+    background: #171921;
+    font-size: 20px;
+}
+table tbody tr{
+    border-radius: 6px;
+    background: 
+    linear-gradient(to bottom right, #20242F 9%, #10141D 50%) bottom right / 50% 50% no-repeat, 
+    linear-gradient(to bottom left, #20242F 9%, #10141D 50%) bottom left / 50% 50% no-repeat, 
+    linear-gradient(to top left, #20242F 9%, #10141D 50%) top left / 50% 50% no-repeat, 
+    linear-gradient(to top right, #20242F 9%, #10141D 50%) top right / 50% 50% no-repeat;
+    background-attachment: fixed;
 }
 
-th, td{
-    color: black;
-    padding: 15px;
-    text-align: left;
-}
 
-th{
-    background-color: #02975e;
-    color: black;
+table td:nth-child(5) {
+    font-size: 20px;
+    font-weight: 500;
+    background-color: #BC194F;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
+    margin: auto;
+    margin-top: 10px;
+    display: flex;  /* Use flexbox for perfect centering */
+    justify-content: center;  /* Center horizontally */
+    align-items: center;  /* Center vertically */
 }
