--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -1,15 +1,49 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Lato', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #4e54c8;
-    height: 100vh;
-    overflow: hidden;
+*{
+    box-sizing: border-box;
 }
 
+
+html, body{
+    background: #1C1F2A;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.navbar{
+    background: #000000;
+    color: white;
+    display: flex;
+    list-style: none;
+    width: 100vw;
+    height: 100px;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 40px;
+}
+.navbar a{
+    font-size: 20px;
+    font-weight: 500;
+    text-decoration: none;
+    color: white;
+}
+
+.navbar li:first-child{
+    padding-left: 120px;
+}
+
+.navbar li:last-child{
+    padding-right: 120px;
+}
+/*
 .menu-container {
     display: flex;
     flex-direction: column;
@@ -20,7 +54,7 @@ html, body {
     color: white;
     align-items: center;
 }
-
+*/
 .menu-container .menu-buttons {
     display: flex;
     flex-direction: column;
