--- a/Settingsmenu/settings.css
+++ b/Settingsmenu/settings.css
@@ -1,114 +1,135 @@
-html, body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Lato', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #4e54c8;
-    height: 100vh;
-    overflow: hidden;
- }
- 
- 
- .settings-container{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 20px;
-    border: 10px;
-    box-shadow: 0px 4px 10px rgba(0,0,0,0.2), inset 0 2px 4px rgba(255, 255, 255, 0.5);
-    width: 600px;
-    color: white;
-    align-items: center;
- }
- 
- 
- .settings-container .settings-buttons{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 50px;
- }
- 
- 
- .settings-container .settings-buttons button{
-    font-size: 20px;
-    font-style: bold;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); 
-    width: 120px;
-    height: 120px;
-    border: 5px solid #AFBDD3;
-    border-radius: 50%;
-    box-shadow:
-    inset -4px -4px 8px rgba(0, 255, 255, 1),
-    inset 1px 4px 8px rgba(70, 142, 255, 1),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 0 15px 4px rgba(211, 211, 211, 0.4);
- }
- 
- 
- .settings-container .settings-buttons .easyBtn{
-    background:radial-gradient(circle at center,#BEFEAF, #22E281, #0A614D 70%);
-    border: 5px solid rgb(54, 122, 57, 1);
-    box-shadow:
-    inset -4px -4px 8px rgb(32, 246, 89),
-    inset 1px 4px 8px rgb(25, 186, 0),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 2px 50px 10px rgba(151, 151, 151, 0.4);
- }
- .settings-container .settings-buttons .mediumBtn{
-    background:radial-gradient(circle at center,#F9E87D, #ffec41, #d3b700 70%);
-    border: 5px solid rgb(195, 182, 0);
-    box-shadow:
-    inset -4px -4px 8px rgb(166, 161, 0),
-    inset 1px 4px 8px rgb(254, 232, 31),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 2px 50px 10px rgba(151, 151, 151, 0.4);
- }
- 
- 
- .settings-container .settings-buttons .hardBtn{
-    background:radial-gradient(circle at center,#F7554B, #d43f4e, #cf3355 70%);
-    border: 5px solid rgb(199, 13, 32);
-    box-shadow:
-    inset -4px -4px 8px rgb(246, 55, 55),
-    inset 1px 4px 8px rgb(249, 61, 61),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 2px 50px 10px rgba(151, 151, 151, 0.4);
- }
- 
- 
- .settings-container .settings-buttons button:hover{
-    transition: background-color 0.3s ease;
-    box-shadow: inset 0 0 20px 10px rgba(189, 189, 189, 0.6),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 2px 50px 10px rgba(151, 151, 151, 0.4);
- }
- 
- 
- .settings-container .timerBtn{
-    width: 200px;
-    height: 70px;
-    border-radius: 10%;
-    font-size: 20px;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-    border: 5px solid rgb(199, 13, 32);
-    background:radial-gradient(ellipse 250px 130px at center,#ff3429, #b62937, #c70832 70%);
-    box-shadow:
-    inset -4px -4px 8px rgb(246, 55, 55),
-    inset 1px 4px 8px rgb(249, 61, 61),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 2px 50px 10px rgba(151, 151, 151, 0.4);
- }
-.settings-container .timerBtn:hover{
-    background:radial-gradient(ellipse 250px 130px at center,#ff534a, #b73d49, #e11a45 70%);
-    transition: background-color 0.3s ease;
-    box-shadow:
-    inset -4px -4px 8px rgb(246, 55, 55),
-    inset 1px 4px 8px rgb(249, 61, 61),
-    1px 15px 20px 10px rgba(0, 0, 0, 0.2),
-    0 2px 50px 10px rgba(151, 151, 151, 0.4);
+* {
+   box-sizing: border-box;
+}
+
+html, body {
+   background: #1C1F2A;
+   width: 100%;
+   height: 100vh;
+   overflow: hidden;
+   margin: 0;
+   padding: 0;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.navbar {
+   background: #000000;
+   color: white;
+   display: flex;
+   list-style: none;
+   width: 100vw;
+   height: 100px;
+   margin: 0;
+   padding: 0;
+   justify-content: space-between;
+   align-items: center;
+   font-size: 24px;
+   font-weight: 500;
+   margin-bottom: 40px;
+}
+
+.navbar a {
+   font-size: 20px;
+   font-weight: 500;
+   text-decoration: none;
+   color: white;
+}
+
+.navbar li:first-child {
+   padding-left: 120px;
+}
+
+.navbar li:last-child {
+   padding-right: 120px;
 }
  
+.settings-container {
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   padding: 20px;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2), inset 0 2px 4px rgba(80, 80, 80, 0.5);
+   width: 600px;
+   color: white;
+   align-items: center;
+   
+}
+
+.settings-container .settings-buttons {
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+   margin-bottom: 50px;
+}
+
+.settings-container .settings-buttons button {
+   font-size: 20px;
+   font-style: bold;
+   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); 
+   width: 120px;
+   height: 120px;
+   border: 5px solid #AFBDD3;
+   border-radius: 50%;
+}
+
+.settings-container .settings-buttons #easyBtn {
+   background: radial-gradient(circle at center,#BEFEAF, #22E281, #0A614D 70%);
+   border: 5px solid rgb(54, 122, 57, 1);
+   box-shadow:
+   inset -4px -4px 8px rgb(32, 246, 89),
+   inset 1px 4px 8px rgb(25, 186, 0),
+   1px 15px 20px 10px rgba(0, 0, 0, 0.2),
+   0 2px 50px 10px rgba(98, 98, 98, 0.4);
+}
+
+.settings-container .settings-buttons #mediumBtn {
+   background: radial-gradient(circle at center,#F9E87D, #ffec41, #d3b700 70%);
+   border: 5px solid rgb(195, 182, 0);
+   box-shadow:
+   inset -4px -4px 8px rgb(166, 161, 0),
+   inset 1px 4px 8px rgb(254, 232, 31),
+   1px 15px 20px 10px rgba(0, 0, 0, 0.2),
+   0 2px 50px 10px rgba(98, 98, 98, 0.4);
+}
+
+.settings-container .settings-buttons #hardBtn {
+   background: radial-gradient(circle at center,#F7554B, #d43f4e, #cf3355 70%);
+   border: 5px solid rgb(199, 13, 32);
+   box-shadow:
+   inset -4px -4px 8px rgb(246, 55, 55),
+   inset 1px 4px 8px rgb(249, 61, 61),
+   1px 15px 20px 10px rgba(0, 0, 0, 0.2),
+   0 2px 50px 10px rgba(98, 98, 98, 0.4);
+}
+
+.settings-container .settings-buttons button:hover {
+   transition: background-color 0.3s ease;
+   box-shadow: inset 0 0 20px 10px rgba(148, 148, 148, 0.6);
+}
+
+.settings-container #timerBtn {
+   width: 200px;
+   height: 70px;
+   border-radius: 10%;
+   font-size: 20px;
+   text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+   border: 5px solid rgb(199, 13, 32);
+   background: radial-gradient(ellipse 250px 130px at center,#ff3429, #b62937, #c70832 70%);
+   box-shadow:
+   inset -4px -4px 8px rgb(246, 55, 55),
+   inset 1px 4px 8px rgb(249, 61, 61),
+   1px 15px 20px 10px rgba(0, 0, 0, 0.2),
+   0 2px 50px 10px rgba(98, 98, 98, 0.4);
+}
+
+.settings-container #timerBtn:hover {
+   background: radial-gradient(ellipse 250px 130px at center,#ff534a, #b73d49, #e11a45 70%);
+   transition: background-color 0.3s ease;
+   box-shadow:
+   inset -4px -4px 8px rgb(246, 55, 55),
+   inset 1px 4px 8px rgb(249, 61, 61),
+   1px 15px 20px 10px rgba(0, 0, 0, 0.2),
+   0 2px 50px 10px rgba(98, 98, 98, 0.4);
+}
