--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -53,7 +53,7 @@ html, body {
     background: #040404;
     left: -200px;
     height: 100%;
-    width: 12%;
+    width: 13%;
 }
 #hamburger-menu ul{
     list-style: none;
@@ -62,7 +62,7 @@ html, body {
 }
 
 #hamburger-menu ul li{
-    padding: 50px 30px;
+ 
     text-align: left;
 }
 
@@ -70,6 +70,12 @@ html, body {
 #hamburger-menu ul li:first-child {
     font-size: 24px;
     font-weight: 500;
+    padding: 30px;
+    text-align: center;
+    background: linear-gradient(to right,#0f886c, #169153, #4db137 70%);
+    border: 3px solid rgb(45, 120, 49);
+    cursor: pointer;
+
 }
 #hamburger-menu ul li a{
     text-decoration: none;
@@ -79,8 +85,9 @@ html, body {
 
 #hamburger-menu ul li:not(:first-child){
     font-size: 18px;
-}
+    padding: 50px 30px;
 
+}
 
 #hamburger-menu.open{
     display: block;
@@ -92,6 +99,27 @@ html, body {
     display: block;
 }
 
+#hamburger-icon,#exit-Icon, .menu-Icon, .settingsBtn, .exitBtn{
+    cursor: pointer;
+}
+
+.menu-Icon{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+#hamburger-exit{
+    width: 24px;
+    height: 24px;
+}
+
+#hamburger-play{
+    width: 26px;
+    height: auto;
+}
+
 @keyframes slidein{
     from {left:-200px;}
     to {left:0;}
@@ -99,20 +127,6 @@ html, body {
 @keyframes slideout{
     from {left:0;}
     to {left:-200px;}
-}
-
-#hamburger-icon,#exit-Icon, #hamburger-exit, .settingsBtn, .exitBtn{
-    cursor: pointer;
-}
-
-#hamburger-exit{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-}
-#hamburger-exit a{
-    color: white;
 }
 
 
@@ -179,14 +193,14 @@ html, body {
     align-items: center;
 }
 
-#settingsMenu-container .settings-buttons {
+#settingsMenu-container #settings-buttons {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-bottom: 50px;
 }
 
-#settingsMenu-container .settings-buttons button {
+#settingsMenu-container #settings-buttons button {
     font-size: 20px;
     font-style: bold;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); 
@@ -196,7 +210,7 @@ html, body {
     border-radius: 50%;
 }
 
-#settingsMenu-container .settings-buttons #settings-easyBtn {
+#settingsMenu-container #settings-buttons #settings-easyBtn {
     background: radial-gradient(circle at center,#BEFEAF, #22E281, #0A614D 70%);
     border: 5px solid rgb(54, 122, 57, 1);
     box-shadow:
@@ -206,7 +220,7 @@ html, body {
     0 2px 50px 10px rgba(98, 98, 98, 0.4);
 }
 
-#settingsMenu-container .settings-buttons #settings-mediumBtn {
+#settingsMenu-container #settings-buttons #settings-mediumBtn {
     background: radial-gradient(circle at center,#F9E87D, #ffec41, #d3b700 70%);
     border: 5px solid rgb(195, 182, 0);
     box-shadow:
@@ -216,7 +230,7 @@ html, body {
     0 2px 50px 10px rgba(98, 98, 98, 0.4);
 }
 
-#settingsMenu-container .settings-buttons #settings-hardBtn {
+#settingsMenu-container #settings-buttons #settings-hardBtn {
     background: radial-gradient(circle at center,#F7554B, #d43f4e, #cf3355 70%);
     border: 5px solid rgb(199, 13, 32);
     box-shadow:
@@ -226,7 +240,7 @@ html, body {
     0 2px 50px 10px rgba(98, 98, 98, 0.4);
 }
 
-#settingsMenu-container .settings-buttons button:hover {
+#settingsMenu-container #settings-buttons button:hover {
     transition: background-color 0.3s ease;
     box-shadow: inset 0 0 20px 10px rgba(148, 148, 148, 0.6);
 }
