--- a/Gameboard/style.css
+++ b/Gameboard/style.css
@@ -1,6 +1,21 @@
+html, body {
+  font-size: 22px;
+  background-color: #4e54c8;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+h1 {
+  font-size: 24px;
+  color: white;
+}
+
+
+
 .board{
   display: grid;
-  grid-template-columns: repeat (4, 100px);
+  grid-template-columns: repeat(4, 100px);
   grid-gap: 10px;
   justify-content: center;
   margin-top: 50px;
