--- a/Gameboard/style.css
+++ b/Gameboard/style.css
@@ -1,14 +1,18 @@
 html, body {
-  font-size: 22px;
-  background-color: #4e54c8;
-  font-family: 'Lato', sans-serif;
+  background: #1C1F2A;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
   margin: 0;
   padding: 0;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 h1 {
   font-size: 24px;
   color: white;
+  text-align: center;
 }
 
 
@@ -36,3 +40,4 @@ h1 {
   background-color: white;
   pointer-events: none;
 }
+
