--- a/Gameboard/style.css
+++ b/Gameboard/style.css
@@ -19,15 +19,15 @@ h1 {
 
 .board{
   display: grid;
-  grid-template-columns: repeat(4, 100px);
-  grid-gap: 10px;
+  grid-template-columns: repeat(4, 150px);
+  grid-gap: 15px;
   justify-content: center;
   margin-top: 50px;
 }
 
 .card {
-  width:100px;
-  height:100px;
+  width:150px;
+  height:150px;
   background-color: lightblue;
   display: flex;
   align-items: center;
@@ -45,14 +45,14 @@ h1 {
 }
 
 .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
+  height: 100%; 
+  width: 160px; 
+  position: fixed; 
+  z-index: 1; 
+  top: 0; 
   left: 0;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
+  background-color: #111; 
+  overflow-x: hidden; 
   padding-top: 20px;
 }
 .sidenav a {
