lagt till CSS för card.flipped och card img

--- a/Gameboard/style.css
+++ b/Gameboard/style.css
@@ -42,6 +42,14 @@ h1 {
 .card.flipped {
   background-color: white;
   pointer-events: none;
+  background-image: none;
+}
+.card img {
+  display: none;
+}
+
+.card.flipped img {
+  display: block;
 }
 
 .sidenav {
