--- a/Gameboard/style.css
+++ b/Gameboard/style.css
@@ -40,13 +40,20 @@ h1 {
 }
 
 .card.flipped {
+  width:150px;
+  height:150px;
   background-color: white;
   pointer-events: none;
   background-image: none;
 }
+
 .card img {
   display: none;
+  width: 100%;   
+  height: 100%;  
+  object-fit: cover; 
 }
+  
 
 .card.flipped img {
   display: block;
