--- a/Gameboard/style.css
+++ b/Gameboard/style.css
@@ -1,5 +1,6 @@
 html, body {
   background: #1C1F2A;
+  background-image: url("img/background.jpg");
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -10,9 +11,11 @@ html, body {
   align-items: center;
 }
 h1 {
-  font-size: 24px;
+  margin-top: 70px ;
+  font-size: 30px;
   color: white;
   text-align: center;
+  font-family: Comic Sans;
 }
 
 
@@ -69,6 +72,7 @@ h1 {
   background-color: #111; 
   overflow-x: hidden; 
   padding-top: 20px;
+  background-image: url("img/sidebar1.jpg");
 }
 .sidenav a {
   padding: 6px 8px 6px 16px;
