--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 /* General Styling */
 * {
     box-sizing: border-box;
 }
 
 html, body {
+    font-family: 'Lato', sans-serif;
     background: #1C1F2A;
     width: 100%;
     height: 100vh;
