--- a/Gamemenu/gamemenu.css
+++ b/Gamemenu/gamemenu.css
@@ -139,11 +139,9 @@ html, body {
 
 #login-container {
     text-align: center;
-    border: 2px solid white;
     padding: 50px;
-    background-color: #3b3fa3;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2), inset 0 2px 4px rgba(80, 80, 80, 0.5);
 }
 
 #login-container h1 {
@@ -176,7 +174,7 @@ html, body {
 }
 
 #login-container input[type="text"], #login-container input[type="password"] {
-    background-color: #6e73dc;
+    background-color: #525253;
     color: white;
 }
 
